--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="first-column">
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <div class="links">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="left-content">
+            <div class="title">This Webiste is Awesome</div>
+            <div class="subtext">
+                <p>
+                This Webiste has some subtext that goes under the main title. Its a smaller font and the color is lower contrast.
+                </p>
+            </div>
+            <button class="sign-up">Sign up</button>
+        </div>
+        <img src="sample.jpg" alt="image placeholder">
+    </div>
 </body>
 </html>
