style: add flex content to style page
Introduced flex content to the style sheet for the first main division of index page. Modified index page html to adapt flex design.

--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
                 </ul>
             </div>
         </div>
-        <div class="left-content">
-            <div class="title">This Webiste is Awesome</div>
-            <div class="subtext">
-                <p>
-                This Webiste has some subtext that goes under the main title. Its a smaller font and the color is lower contrast.
-                </p>
+        <div class="content-first">
+            <div class="left-content">
+                <div class="title">This Webiste is Awesome</div>
+                <div class="subtext">
+                    <p>
+                    This Webiste has some subtext that goes under the main title. Its a smaller font and the color is lower contrast.
+                    </p>
+                </div>
+                <button class="sign-up">Sign up</button>
             </div>
-            <button class="sign-up">Sign up</button>
+            <img src="sample.jpg" alt="image placeholder">
         </div>
-        <img src="sample.jpg" alt="image placeholder">
     </div>
 </body>
 </html>
