feat: add another layout to index page

--- a/index.html
+++ b/index.html
@@ -34,5 +34,26 @@
             <img src="sample.jpg" alt="image placeholder">
         </div>
     </div>
+    <div class="second-column">
+        <div class="information">Some random information</div>
+        <div class="img-content">
+            <div class="info">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustrated image</div>
+            </div>
+            <div class="info">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustrated image</div>
+            </div>
+            <div class="info">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustrated image</div>
+            </div>
+            <div class="info">
+                <img src="" alt="">
+                <div class="text">this is some subtext under an illustrated image</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
