--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <div class="information">Some random information</div>
         <div class="img-content">
             <div class="info">
-                <img src="batman.png" alt="batman">
+                <img class=batman-image src="batman.png" alt="batman">
                 <div class="text">this is some subtext under an illustrated image</div>
             </div>
             <div class="info">
-                <img src="batman.png" alt="batman">
+                <img class=batman-image src="batman.png" alt="batman">
                 <div class="text">this is some subtext under an illustrated image</div>
             </div>
             <div class="info">
-                <img src="batman.png" alt="batman">
+                <img class=batman-image src="batman.png" alt="batman">
                 <div class="text">this is some subtext under an illustrated image</div>
             </div>
             <div class="info">
-                <img src="batman.png" alt="batman">
+                <img class=batman-image src="batman.png" alt="batman">
                 <div class="text">this is some subtext under an illustrated image</div>
             </div>
         </div>
