feat: add third column on index

--- a/index.html
+++ b/index.html
@@ -55,5 +55,10 @@
             </div>
         </div>
     </div>
+
+    <div class="third-column">
+        <div class="quote">This is an inspiring quote or an testimonial from a customer. Maybe it's filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice </div>
+        <div class="author">-Thor, God of Thunder</div>
+    </div>
 </body>
 </html>
