--- a/index.html
+++ b/index.html
@@ -60,5 +60,13 @@
         <div class="quote">This is an inspiring quote or an testimonial from a customer. Maybe it's filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice </div>
         <div class="author">-Thor, God of Thunder</div>
     </div>
+
+    <div class="fourth-column">
+        <div class="content-box">
+            <div class="action">Call to action! It's time!</div>
+            <div class="banner">Sign up for our product by clicking that link over there!</div>
+        </div>
+        <button>Sign up</button>
+    </div>
 </body>
 </html>
