--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="action">Call to action! It's time!</div>
             <div class="banner">Sign up for our product by clicking that link over there!</div>
         </div>
-        <button>Sign up</button>
+        <button class="button border">Sign up</button>
     </div>
 </body>
 </html>
