feat: add footer to index

--- a/index.html
+++ b/index.html
@@ -68,5 +68,7 @@
         </div>
         <button class="button border">Sign up</button>
     </div>
+    
+    <div class="footer">Copyright © Hhbhari 2024</div>
 </body>
 </html>
